# Utopia

./: .gitignore  CMakeLists.txt  README.md  doc_zhCN.md  todo.md
assets/: test.world
assets/_internal/materials/: default_G.mat  directionalShadow.mat  error.mat  skyBlack.mat  skyWhite.mat
assets/_internal/pipelines/: StdDXRPipeline.pipeline  StdPipeline.pipeline
assets/_internal/textures/: BRDFLUT.tex2d  black.tex2d  black.texcube  normal.tex2d  white.tex2d  white.texcube
assets/scenes/: Game.scene  skybox.world
assets/scripts/: Game.lua  MoveChildren.lua  MoveRoot.lua  test_00.lua
assets/shaders/: ATrous.hlsl  ATrous.shader  BasicRayTracing.rt.hlsl  Default.hlsl  Default.shader  DeferredLighting.shader  DirectionalShadow.hlsl  DirectionalShadow.shader  DustEngine.hlsli  FilterMoments.hlsl  FilterMoments.shader  Forward.hlsl  Forward.shader  ForwardColor.hlsl  ForwardColor.shader  ForwardHole.hlsl  ForwardHole.shader  ForwardLighting.hlsl  ForwardLighting.shader  ForwardSelected.hlsl  ForwardSelected.shader  ForwardSimpleColor.hlsl  GaussBlur_x.hlsl  GaussBlur_x.shader  GaussBlur_y.hlsl  GaussBlur_y.shader  Geometry.hlsl  Geometry.shader  GeometryBuffer.hlsl  GeometryBuffer.shader  ImageScaler.hlsl  ImageScaler.shader  Irradiance.hlsl  Irradiance.shader  PBR.hlsli  PostProcess.hlsl  PostProcess.shader  PreFilter.hlsl  PreFilter.shader  Prefilter.shader  (+19 more)
cmake/: Shader.g4
config/: Config.cmake.in
designs/: DataDrivenRendering.md  DesceriptorHeap.md  Lifetime.md  MultiThread.md  PSOManagement.md  Serialize.md  Shader.md  ShaderConstantBuffer.md  Shader_xmind.md  StaticDynamicResource.md  TripleBuffer.md  deps.md
include/DustEngine/: DustEngine.h
include/DustEngine/Asset/: AssetMngr.h  Serializer.h
include/DustEngine/Core/: DefaultAsset.h  GameTimer.h  HLSLFile.h  ImGUIMngr.h  Image.h  Material.h  Mesh.h  Object.h  Scene.h  Shader.h  ShaderMngr.h  SubMeshDescriptor.h  TextAsset.h  Texture.h  Texture2D.h  TextureCube.h  Traits.h
include/DustEngine/LuaECS/: LuaECS.h
include/DustEngine/Render/: HLSLFile.h  Material.h  Mesh.h  MeshTopology.h  RenderQueue.h  RenderRsrcObject.h  RenderState.h  RootParameter.h  Shader.h  ShaderPass.h  ShaderProperty.h  Texture.h  Texture2D.h
include/DustEngine/ScriptSystem/: LuaContext.h  LuaCtxMngr.h  LuaMngr.h  LuaScript.h  LuaScriptQueue.h  LuaScriptQueueSystem.h
include/DustEngine/Transform/: Transform.h
include/Utopia/Asset/: AssetMngr.h  Serializer.h
include/Utopia/Core/: Asset.h  AssetImporter.h  AssetMngr.h  Core.h  DefaultAsset.h  GameTimer.h  ImGUIMngr.h  Image.h  Object.h  Register_Core.h  ResourceMap.h  Scene.h  Serializer.h  SharedVar.h  StringsSink.h  TextAsset.h  Traits.h  UDRefl_Register_Core.h  WorldAssetImporter.h
include/Utopia/Render/: GPURsrc.h  HLSLFile.h  HLSLFileImporter.h  Material.h  MaterialImporter.h  Mesh.h  MeshImporter.h  MeshTopology.h  ModelImporter.h  Register_Render.h  RenderQueue.h  RenderRsrcObject.h  RenderState.h  RenderTargetTexture2D.h  RootParameter.h  Shader.h  ShaderImporter.h  ShaderMngr.h  ShaderPass.h  ShaderProperty.h  SubMeshDescriptor.h  Texture.h  Texture2D.h  TextureCube.h  TextureCubeImporter.h  (+2 more)
src/Asset/: AssetMngr.cpp  CMakeLists.txt  Serializer.cpp
src/Asset/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
src/Asset/UShaderCompiler/: UShaderCompiler.cpp  UShaderCompiler.h
src/Core/: AssetImporter.cpp  AssetMngr.cpp  CMakeLists.txt  GameTimer.cpp  ImGUIMngr.cpp  Image.cpp  Mesh.cpp  Serializer.cpp  ShaderMngr.cpp  StringsSink.cpp  TextureCube.cpp  WorldAssetImporter.cpp  World_Register_Core.cpp
src/LuaECS/: CMakeLists.txt  LuaECS.cpp
src/Render/: CMakeLists.txt  HLSLFileImporter.cpp  MaterialImporter.cpp  Mesh.cpp  MeshImporter.cpp  ModelImporter.cpp  Register_Render.cpp  RenderQueue.cpp  ShaderImporter.cpp  ShaderMngr.cpp  TextureCube.cpp  TextureCubeImporter.cpp  TextureImporter.cpp  UDRefl_Register_Render.cpp
src/Render/DX12/: CMakeLists.txt  CameraRsrcMngr.cpp  DeferredLighting.cpp  DeferredLighting.h  DirectionalShadow.cpp  DirectionalShadow.h  ForwardLighting.cpp  ForwardLighting.h  FrameGraphVisualize.cpp  GPURsrcMngrDX12.cpp  GeometryBuffer.cpp  GeometryBuffer.h  IBLPreprocess.cpp  IBLPreprocess.h  IPipeline.cpp  IPipelineStage.h  MeshLayoutMngr.cpp  PipelineBase.cpp  PipelineCommonUtils.cpp  PipelineCommonUtils.h  PipelineImporter.cpp  PostProcessing.cpp  PostProcessing.h  RsrcMngrDX12.cpp  ShaderCBMngr.cpp  ShaderCBMngrDX12.cpp  Sky.cpp  Sky.h  StdDXRPipeline.cpp  StdPipeline.cpp  TAA.cpp  TAA.h  Tonemapping.cpp  Tonemapping.h  WorldRsrcMngr.cpp
src/Render/ShaderImporter/: ShaderImporterRegisterImpl.h  ShaderImporterRegister_Blend.cpp  ShaderImporterRegister_BlendOp.cpp  ShaderImporterRegister_BlendState.cpp  ShaderImporterRegister_CompareFunc.cpp  ShaderImporterRegister_CullMode.cpp  ShaderImporterRegister_DescriptorRange.cpp  ShaderImporterRegister_FillMode.cpp  ShaderImporterRegister_RenderState.cpp  ShaderImporterRegister_RootConstants.cpp  ShaderImporterRegister_RootDescriptor.cpp  ShaderImporterRegister_RootDescriptorType.cpp  ShaderImporterRegister_Shader.cpp  ShaderImporterRegister_ShaderPass.cpp  ShaderImporterRegister_ShaderProperty.cpp  ShaderImporterRegister_Shader_1.cpp  ShaderImporterRegister_Shader_2.cpp  ShaderImporterRegister_Shader_3.cpp  ShaderImporterRegister_StencilOp.cpp  ShaderImporterRegister_StencilState.cpp
src/Render/Systems/: CameraSystem.cpp
src/Render/UShaderCompiler/: UShaderCompiler.cpp
src/ScriptSystem/: CMakeLists.txt  InitCore.cpp  InitTransform.cpp  InitTransform.h  InitUECS.cpp  InitUECS.h  InitUGraphviz.cpp  InitUGraphviz.h  LuaArray.h  LuaBuffer.h  LuaCmpt.cpp  LuaCmpt.h  LuaContext.cpp  LuaCtxMngr.cpp  LuaECSAgency.cpp  LuaECSAgency.h  LuaMemory.cpp  LuaMemory.h  LuaMngr.cpp  LuaScriptQueueSystem.cpp  LuaSystem.cpp  LuaSystem.h
src/Transform/: CMakeLists.txt  LocalToParentSystem.cpp  RotationEulerSystem.cpp  TRSToLocalToParentSystem.cpp  TRSToLocalToWorldSystem.cpp  WorldToLocalSystem.cpp
tools/ushader/: UShader.g4  run.bat  run_build.bat  run_fast.bat  test.ushader  test2.ushader
(+458 files in other folders)
